--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -41,9 +41,23 @@ else
                 <MudPaper Class="my-4" Style="background-color: var(--mud-palette-drawer-background);">
                     <MudList>
                         <MudListItem Class="py-0">
-                            <div class="d-flex flex-row align-center justify-space-between">
-                                <b class="mud-list-subheader pa-0">Map pool</b>
-                                <MudButtonGroup OverrideStyles="false">
+                            <div class="d-flex flex-row align-center">
+                                <b class="mud-list-subheader pa-0 mr-1">Map pool</b>
+                                <MudTooltip RootClass="d-flex">
+                                    <ChildContent>
+                                        <MudIcon Icon="@Icons.Material.Filled.Info" Size="Size.Small" />
+                                    </ChildContent>
+                                    <TooltipContent>
+                                        <p style="text-align: left; max-width: 300px;">
+                                            The pool of maps the dynamic playlist should pull maps from.<br />
+                                            <br />
+                                            <b>Downloaded maps:</b> Includes all downloaded maps.<br />
+                                            <b>Improvement maps:</b> Includes all ranked maps. Ranked maps can, in addition to the standard map filters/sortings, be filtered on/sorted by estimated scores.
+                                            Ranked maps will be downloaded to your PC if they are not already downloaded.
+                                        </p>
+                                    </TooltipContent>
+                                </MudTooltip>
+                                <MudButtonGroup OverrideStyles="false" Class="ml-auto">
                                     <MudButton Variant="Variant.Filled"
                                                Color="@(configuration.MapPool == MapPool.Standard ? Color.Primary : Color.Default)"
                                                OnClick="() => ChangeMapPool(MapPool.Standard)">
