--- a/MapMaven/Components/Playlists/FilterOperationInput.razor
+++ b/MapMaven/Components/Playlists/FilterOperationInput.razor
@@ -13,7 +13,7 @@
         ValueChanged="OnFieldChanged"
         Variant="Variant.Outlined"
         Margin="Margin.Dense"
-        Class="pr-2 d-block" Style="max-width: 185px;">
+        Class="pr-2 d-block" Style="max-width: 168px;">
         @foreach (var field in DynamicPlaylistFields.FieldOptions(MapPool))
         {
             <MudSelectItem Value="field" >
@@ -28,7 +28,7 @@
             Variant="Variant.Outlined"
             Margin="Margin.Dense"
             ToStringFunc="filterOperator => (SelectedFieldOption != null ? filterOperator.DisplayName() : string.Empty)"
-            Class="px-2" Style="width: 90px">
+            Class="px-2" Style="width: 135px;">
             @if (SelectedFieldOption != null)
             {
                 foreach (var filterOperator in DynamicPlaylistArrangementService.FilterOperatorsForType[SelectedFieldOption.Type])
@@ -43,19 +43,19 @@
     @switch (SelectedFieldOption?.Type)
     {
         case Type type when type == typeof(string):
-            <MudTextField @bind-Value="FilterOperation.Value" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 185px;" />
+            <MudTextField @bind-Value="FilterOperation.Value" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 168px;" />
             break;
         case Type type when Numeric.Is(type):
-            <MudNumericField Value="FilterOperation.Value" TextChanged="DoubleValueChanged" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 185px;" />
+            <MudNumericField Value="FilterOperation.Value" TextChanged="DoubleValueChanged" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 168px;" />
             break;
         case Type type when type == typeof(bool):
-            <MudSwitch T="bool" Checked="@(bool.TryParse(FilterOperation.Value, out var boolValue) ? boolValue : false)" CheckedChanged="BooleanValueChanged" Color="Color.Primary" Class="pl-2 d-block" Style="padding-left: 56px !important; width: calc(185px + 90px);" />
+            <MudSwitch T="bool" Checked="@(bool.TryParse(FilterOperation.Value, out var boolValue) ? boolValue : false)" CheckedChanged="BooleanValueChanged" Color="Color.Primary" Class="pl-2 d-block" Style="padding-left: 56px !important; width: calc(168px + 90px);" />
             break;
         case Type type when type == typeof(DateTime):
-            <MudDatePicker Date="@(DateTime.TryParse(FilterOperation.Value, CultureInfo.InvariantCulture, out var dateValue) ? dateValue : null)" DateChanged="DateValueChanged" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 185px;" />
+            <MudDatePicker Date="@(DateTime.TryParse(FilterOperation.Value, CultureInfo.InvariantCulture, out var dateValue) ? dateValue : null)" DateChanged="DateValueChanged" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 168px;" />
             break;
         default:
-            <MudTextField @bind-Value="FilterOperation.Value" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 185px;" />
+            <MudTextField @bind-Value="FilterOperation.Value" Label="Value" Variant="Variant.Outlined" Margin="Margin.Dense" Class="pl-2 d-block" Style="max-width: 168px;" />
             break;
     }
     <MudIconButton Icon="@Icons.Material.Filled.RemoveCircle" OnClick="OnRemove" Class="pl-2 pr-1" />
