--- a/MapMaven/Components/Playlists/SortOperationInput.razor
+++ b/MapMaven/Components/Playlists/SortOperationInput.razor
@@ -9,7 +9,7 @@
     {
         <MudText Typo="Typo.caption" Style="width: 60px">Then by</MudText>
     }
-    <MudSelect T="DynamicPlaylistFieldOption" Value="SelectedFieldOption" ToStringFunc="field => field?.Name" Label="Field" ValueChanged="OnFieldChanged" Variant="Variant.Outlined" Margin="Margin.Dense">
+    <MudSelect T="DynamicPlaylistFieldOption" Value="SelectedFieldOption" ToStringFunc="field => field?.Name" Label="Field" title="@SelectedFieldOption?.Name" ValueChanged="OnFieldChanged" Variant="Variant.Outlined" Margin="Margin.Dense">
         @foreach (var field in DynamicPlaylistFields.FieldOptions(MapPool))
         {
             <MudSelectItem Value="field">
