--- a/MapMaven/Components/Replay.razor
+++ b/MapMaven/Components/Replay.razor
@@ -11,6 +11,6 @@
 
     string GetScoreSaberReplayUrl()
     {
-        return ScoreSaberService.GetScoreSaberReplayUrl(Map.Id, Map.PlayerScore);
+        return ScoreSaberService.GetScoreSaberReplayUrl(Map.Id, Map.HighestPlayerScore);
     }
 }
