--- a/MapMaven/Components/Maps/RankedMapBrowserRow.razor
+++ b/MapMaven/Components/Maps/RankedMapBrowserRow.razor
@@ -9,7 +9,7 @@
 </TemplateColumn>
 <TemplateColumn T="Map" Class="pa-1" Style="width: 50px" Sortable="false">
     <CellTemplate>
-        <MapCover Map="context.Item"></MapCover>
+        <MapCover Map="context.Item" Size="50"></MapCover>
     </CellTemplate>
 </TemplateColumn>
 <PropertyColumn T="Map" TProperty="string" Property="m => m.Name" Sortable="false"></PropertyColumn>
