--- a/MapMaven/Components/Maps/MapBrowserRow.razor
+++ b/MapMaven/Components/Maps/MapBrowserRow.razor
@@ -8,10 +8,15 @@
         <SongPlaybackButton Map="context.Item"></SongPlaybackButton>
     </CellTemplate>
 </TemplateColumn>
+<TemplateColumn T="Map" Sortable="false" CellStyle="width: 50px">
+    <CellTemplate>
+        <MudIconButton Icon="@Icons.Material.Filled.Info" Variant="Variant.Text" Size="Size.Medium" OnClick="() => OpenDetails(context.Item)" />
+    </CellTemplate>
+</TemplateColumn>
 <TemplateColumn T="Map" Sortable="false" Class="pa-1" CellStyle="width: 50px">
     <CellTemplate>
         <div style="min-width: 50px">
-            <MapCover Map="context.Item"></MapCover>
+            <MapCover Map="context.Item" Size="50"></MapCover>
         </div>
     </CellTemplate>
 </TemplateColumn>
