--- a/MapMaven/Components/Maps/MapDetail.razor
+++ b/MapMaven/Components/Maps/MapDetail.razor
@@ -1,4 +1,7 @@
-﻿<MudDialog>
+﻿@using MapMaven.Core.Utilities;
+@using MapMaven.Core.Utilities.Scoresaber
+
+<MudDialog>
     <DialogContent>
         <MapCover Map="Map" Class="blurred-background-image" Style="height: 150px; top: -50px" />
         <MudGrid>
@@ -6,7 +9,95 @@
                 <MapCover Map="Map" />
             </MudItem>
             <MudItem xs="8">
-                <h1>@Map.Name</h1>
+                <MudText Typo="Typo.h4">@Map.Name</MudText>
+                <MudText Typo="Typo.subtitle2">By <b>@Map.SongAuthorName</b></MudText>
+                <MudText Typo="Typo.subtitle2">Mapped by <b>@Map.MapAuthorName</b></MudText>
+                <div class="mt-2">
+                    @if (Map.Played)
+                    {
+                        <MudChip Color="Color.Primary" Size="Size.Small" Class="ml-0">Played</MudChip>
+                    }
+                    @if (Map.Ranked)
+                    {
+                        <MudChip Color="Color.Primary" Size="Size.Small" Class="ml-0">Ranked</MudChip>
+                    }
+                </div>
+            </MudItem>
+            <MudItem xs="12">
+                <MudPaper Class="pa-4" Style="background-color: var(--mud-palette-drawer-background);">
+                    <MudGrid>
+                        <MudItem xs="6">
+                            <MudText><b>Added:</b> @Map.AddedDateTime.ToShortDateString() @Map.AddedDateTime.ToLongTimeString()</MudText>
+                        </MudItem>
+                        <MudItem xs="6">
+                            <MudText><b>Duration:</b> @Map.SongDuration.ToString("mm':'ss")</MudText>
+                        </MudItem>
+                    </MudGrid>
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="12">
+                @foreach (var rankedMap in Map.RankedMaps.OrderByDescending(m => DifficultyUtils.GetOrder(m.Difficulty)))
+                {
+                    var tableStyle = $"background-color: var(--mud-palette-drawer-background); border-left: 2px solid {DifficultyDisplayUtils.GetColor(rankedMap.Difficulty)}";
+
+                    <MudPaper Class="mb-4" Style="@tableStyle">
+                        <MudSimpleTable Dense="true" Class="background-transparent mud-elevation-0">
+                            <thead>
+                                <tr>
+                                    <td colspan="2">
+                                        <MudText Typo="Typo.overline">
+                                            @DifficultyDisplayUtils.GetDisplayName(rankedMap.Difficulty)
+                                        </MudText>
+                                    </td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><b>Star difficulty</b></td>
+                                    <td>@rankedMap.Stars</td>
+                                </tr>
+                                <tr>
+                                    <td><b>PP</b></td>
+                                    <td>@rankedMap.PP.ToString("#0.##")</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Note jump speed</b></td>
+                                    <td>@rankedMap.NoteJumpSpeed.ToString("#0.##")</td>
+                                </tr>
+
+                                @{
+                                    var playerScore = Map.AllPlayerScores.FirstOrDefault(s => s.Leaderboard.Difficulty.DifficultyName == rankedMap.Difficulty);
+
+                                    if (playerScore != null)
+                                    {
+                                        <tr>
+                                            <td colspan="2">
+                                                <MudIcon Icon="@Icons.Material.Filled.Leaderboard" Size="Size.Small"></MudIcon>
+                                                <MudText Typo="Typo.overline">Score</MudText>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Base score</b></td>
+                                            <td>@playerScore.Score.BaseScore</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Modified score</b></td>
+                                            <td>@playerScore.Score.ModifiedScore</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>Accuracy</b></td>
+                                            <td>@playerScore.AccuracyWithMods().ToString("#0.##")%</td>
+                                        </tr>
+                                        <tr>
+                                            <td><b>PP</b></td>
+                                            <td>@playerScore.Score.Pp.ToString("#0.##")</td>
+                                        </tr>
+                                    }
+                                }
+                            </tbody>
+                        </MudSimpleTable>
+                    </MudPaper>
+                }
             </MudItem>
         </MudGrid>
     </DialogContent>
