Added BeatSaver API client + fixed NSwag generation

--- a/MapMaven/Components/PlayerProfile.razor
+++ b/MapMaven/Components/PlayerProfile.razor
@@ -1,6 +1,6 @@
 ﻿@inherits ReactiveComponent
 
-@using MapMaven.Core.ApiClients;
+@using MapMaven.Core.ApiClients.ScoreSaber;
 @using MapMaven.Core.Services;
 
 @if (Player != null)
