--- a/MapMaven/Components/Replay.razor
+++ b/MapMaven/Components/Replay.razor
@@ -1,4 +1,4 @@
-﻿@using MapMaven.Core.ApiClients;
+﻿@using MapMaven.Core.ApiClients.ScoreSaber;
 @using MapMaven.Core.Services
 
 <iframe src="@GetScoreSaberReplayUrl()" style="height: 80vh"></iframe>
