Added hash to details

--- a/MapMaven/Components/Maps/MapDetail.razor
+++ b/MapMaven/Components/Maps/MapDetail.razor
@@ -32,6 +32,9 @@
                         <MudItem xs="6">
                             <MudText><b>Duration:</b> @Map.SongDuration.ToString("mm':'ss")</MudText>
                         </MudItem>
+                        <MudItem xs="12">
+                            <MudText><b>Hash:</b> @Map.Hash</MudText>
+                        </MudItem>
                     </MudGrid>
                 </MudPaper>
             </MudItem>
